# vyatta-config-migrate

./: .frlog  .gitignore  COPYING  Makefile.am  configure.ac
debian/: README  changelog  control  copyright  rules
migrate/content-inspection/: 0-to-1  1-to-2  2-to-1
migrate/dhcp-server/: interface_to_subnet.pl  subnet_to_interface.pl
migrate/firewall/: 0-to-1  3-to-4  5-to-4
migrate/ipsec/: 1-to-2  2-to-3  3-to-2  3-to-4
migrate/qos/: 0-to-1  1-to-0  1-to-2  2-to-1
migrate/quagga/: 0-to-1
migrate/serial/: 1-to-2
migrate/system/: 3-to-2  3-to-4  4-to-3  4-to-5  5-to-4  6-to-7
migrate/vrrp/: 1-to-2
migrate/wanloadbalance/: 1-to-2
migrate/webproxy/: 0-to-1
migrate/zone-policy/: 0-to-1
scripts/: XorpConfigMigrator.pl  XorpConfigParser.pm  config-downgrade  vyatta_config_migrate.pl  vyatta_current_conf_ver.pl
